--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,28 +13,35 @@
         android:theme="@style/Theme.AENaturals"
         tools:targetApi="31">
         <activity
-            android:name=".salesman.UI.Activity.SalesmanDashboard"
+            android:name="com.aenatural.aenaturals.salesmans.SalesmanDashboard"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".retailer.UI.Activity.RetailerDashboard"
+            android:name="com.aenatural.aenaturals.retailers.RetailerDashboard"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".distributor.UI.Activity.DistributorDashboard"
+            android:name="com.aenatural.aenaturals.common.WelcomeScreen"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".WelcomeUI.Activity.Splash"
+            android:name="com.aenatural.aenaturals.distributors.DistributorDashboard"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name="com.aenatural.aenaturals.common.Splash"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
@@ -47,7 +54,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".WelcomeUI.Activity.Login"
+            android:name="com.aenatural.aenaturals.common.Login"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
