--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,12 +24,8 @@
         </activity>
         <activity
             android:name="com.aenatural.aenaturals.salesmans.CustomerRegistrationActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
             <meta-data
                 android:name="android.app.lib_name"
@@ -43,8 +39,13 @@
                 android:value="" />
         </activity>
         <activity
-            android:name="com.aenatural.aenaturals.retailers.RetailerDashboard"
-            android:exported="false">
+            android:name="com.aenatural.aenaturals.customers.CustomerDashboard"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
