--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.pearl.aenaturals'
+    namespace 'com.aenatural.aenaturals'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.pearl.aenaturals"
+        applicationId "com.aenatural.aenaturals"
         minSdk 21
         targetSdk 33
         versionCode 1
@@ -50,4 +50,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
 
+    implementation 'com.github.blackfizz:eazegraph:1.2.2@aar'
+    implementation 'com.nineoldandroids:library:2.4.0'
 }
+
+
