--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AENaturals"
         tools:targetApi="31">
+
         <activity
             android:name="com.aenatural.aenaturals.salesmans.SalesmanProfileActivity"
             android:exported="false">
@@ -40,12 +41,8 @@
         </activity>
         <activity
             android:name="com.aenatural.aenaturals.customers.CustomerDashboard"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -67,13 +64,18 @@
         <activity
             android:name="com.aenatural.aenaturals.common.Splash"
             android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name="com.aenatural.aenaturals.common.Login"
-            android:exported="true">
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
