--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -15,7 +15,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AENaturals"
         tools:targetApi="31">
-
+        <activity
+            android:name=".distributors.AddSalesmanActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".distributors.DistributorProfileActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name="com.aenatural.aenaturals.salesmans.SalesmanProfileActivity"
             android:exported="false">
@@ -26,8 +39,6 @@
         <activity
             android:name="com.aenatural.aenaturals.salesmans.CustomerRegistrationActivity"
             android:exported="false">
-
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -42,7 +53,6 @@
         <activity
             android:name="com.aenatural.aenaturals.customers.CustomerDashboard"
             android:exported="false">
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -55,11 +65,12 @@
                 android:value="" />
         </activity>
         <activity
-            android:name="com.aenatural.aenaturals.distributors.DistributorDashboard"
+            android:name=".distributors.DistributorDashboard"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -69,7 +80,6 @@
         <activity
             android:name="com.aenatural.aenaturals.common.Splash"
             android:exported="true">
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
