--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,13 @@
         android:theme="@style/Theme.AENaturals"
         tools:targetApi="31">
         <activity
+            android:name=".customers.CustomerProfileActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".distributors.DistributorRequestActiivty"
             android:exported="false">
             <meta-data
@@ -58,11 +65,12 @@
                 android:value="" />
         </activity>
         <activity
-            android:name="com.aenatural.aenaturals.customers.CustomerDashboard"
+            android:name=".customers.CustomerDashboard"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -82,8 +90,6 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-
-
         </activity>
         <activity
             android:name="com.aenatural.aenaturals.common.Splash"
