--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ android {
     }
 }
 
+
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -53,6 +54,9 @@ dependencies {
     implementation 'com.github.blackfizz:eazegraph:1.2.2@aar'
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'com.github.blackfizz:eazegraph:1.2.5l@aar'
+
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
 
 
