customer dashboard design change 90%

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,11 +78,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name="com.aenatural.aenaturals.common.WelcomeScreen"
@@ -101,10 +97,16 @@
         </activity>
         <activity
             android:name="com.aenatural.aenaturals.common.Splash"
-            android:exported="true">
+            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar.FullScreen"
+        android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name="com.aenatural.aenaturals.common.Login"
