--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     implementation 'com.github.yalantis:ucrop:2.2.8'
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
 }
 
 
