--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,10 @@ dependencies {
 
     implementation 'com.github.yalantis:ucrop:2.2.8'
     implementation 'com.github.bumptech.glide:glide:4.15.1'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+        // Add other dependencies if needed
 }
 
 
