Fix issue of updating inage and set profile picture for

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,20 @@
         android:theme="@style/Theme.AENaturals"
         tools:targetApi="31">
         <activity
+            android:name=".myspalon.CreateInvoide"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".myspalon.MSInvoiceActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".myspalon.MSCustomersActivity"
             android:exported="false">
             <meta-data
