--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,11 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-        // Add other dependencies if needed
+    implementation 'com.google.code.gson:gson:2.8.8'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+        // Other dependencies
+
+    // Add other dependencies if needed
 }
 
 
