--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/ic_logo_aen"
+        android:icon="@drawable/ae_app_logo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_logo_aen"
         android:supportsRtl="true"
